kubernetes/nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  tls:
    - hosts:
        - "*.skippythesnake.com"
      secretName: wildcard-certificate
  ingressClassName: nginx
  rules:
    - host: habit.skippythesnake.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: habit-tracker-ui-service-internal
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: habit-tracker-api-service-internal
                port:
                  number: 80
